--- a/package.json
+++ b/package.json
@@ -3,43 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
-    "formik": "^2.2.6",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.19",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.4",
+    "bootstrap": "^4.6.2",
+    "formik": "^2.2.9",
     "formix": "0.0.1",
-    "prop-types": "^15.7.2",
-    "qs": "^6.9.4",
+    "prop-types": "^15.8.1",
+    "qs": "^6.11.0",
     "query-string": "^6.14.0",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-flickity-component": "^3.6.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.6",
+    "react-dom": "^17.0.2",
+    "react-flickity-component": "^3.6.3",
     "react-rater": "^5.1.1",
-    "react-redux": "^7.2.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-redux": "^7.2.9",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.1",
     "react-select": "^4.1.0",
-    "react-slick": "^0.27.13",
+    "react-slick": "^0.27.14",
     "react-toastify": "^7.0.3",
-    "redux": "^4.0.5",
+    "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-promise-middleware": "^6.1.2",
+    "redux-promise-middleware": "^6.1.3",
     "redux-promise-middleware-actions": "^3.0.1",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^3.1.1",
     "web-vitals": "^0.2.4",
-    "yup": "^0.32.8"
+    "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
