--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^1.6.6",
     "react-dom": "^17.0.2",
     "react-flickity-component": "^3.6.3",
+    "react-loading-overlay": "^1.0.1",
     "react-rater": "^5.1.1",
     "react-redux": "^7.2.9",
     "react-router": "^5.3.4",
