--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.1",
-    "react-select": "^4.1.0",
+    "react-select": "^4.3.1",
     "react-slick": "^0.27.14",
     "react-toastify": "^7.0.3",
+    "react-vertical-timeline-component": "^3.6.0",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
